fixed overlay and white text (z-index)

--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,18 @@
     display: table;
 }
 
+.layer {
+    position: relative;
+}
 .layer::after {
     content: "";
     position: absolute; 
+    left: 0;  /* strano che abbia avuto bisogno di specificarlo */
     width: 100%;
     height: 100%;
     z-index: 1;
     background-color: #333;
-    opacity: 0.2;
+    opacity: 0.3;
 }
 
 .br {       /* border radius */
@@ -38,10 +42,6 @@
 
 .fl {
     /* classe float */
-}
-
-.overlayed::after {
-
 }
 /* --------------------------------- */
 
@@ -86,11 +86,10 @@ nav ul li a {
     position: relative;
 }
 
-.section1
-
 .section1 .text {
     width: 60%;
     position: absolute;
+    z-index: 2;
     bottom: 80px;
     left: 50px;
     color: #fff;  /* perche non mi cambia il colore? non eredita???*/
